додано новий файл и абзац

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 <section class="firstscreen">
  <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quos dolore quo, repudiandae reiciendis, laborum non doloremque consectetur tenetur possimus incidunt modi pariatur molestias? Provident enim eligendi doloribus nulla sunt?
  Harum labore facere expedita accusantium quaerat quibusdam id dolore fuga enim, sint maxime iure quam unde! Saepe, quibusdam. Esse ipsa accusantium laudantium expedita tenetur alias </h2></section>
+ <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil cum ipsum quaerat aliquam deserunt. Modi dolorem incidunt perferendis alias porro tempora est officiis minus animi amet exercitationem sequi, natus eaque.</p>
 <section class="secondscreen">Lorem.</section>
 </body>
 </html>
+<!-- git init -->
+<!-- git add . -->
+<!-- git commit -m 'коментар до першого комміту' -->
+<!-- git config --global user.email "sergeevdima017@gmail.com" -->
+<!-- git config --global user.name "Сергеєв Дмитро" -->
+<!-- clear -->
